yourapp/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: yourapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: myingress.local
    http:
      paths:
      - path: /yourapp
        backend:
          serviceName: yourapp-service
          servicePort: 8080
